--- a/index.html
+++ b/index.html
@@ -357,6 +357,18 @@
     <img src="https://image.tmdb.org/t/p/original/fRaBjht3S1HU6lJrz2SoFwwOZQM.jpg" alt="El Arca de Noé">
     <p></p>
 </div>
+        <div class="movie" data-title="Bolt" data-year="2008" data-genre="Animación, Familia, Aventura, Comedia" data-duration="1h 36 mins" data-synopsis="Bolt, un perro estrella de la televisión, cree que sus poderes son reales hasta que se embarca en una aventura para encontrar a su dueña en el mundo real. todo." data-link="https://vpn-movie-ofc.blogspot.com/2024/05/embed_27.html?r=aHR0cHM6Ly9pcGxheWVyaGxzLmNvbS9lL2ZoejV1cDV0Z3Yxbg==">
+    <img src="https://image.tmdb.org/t/p/original/v5aC4nrzXFGJDWY4JO1eengXzqk.jpg" alt="Bolt">
+    <p></p>
+</div>
+<div class="movie" data-title="Bee Movie" data-year="2007" data-genre="Familia, Animación, Aventura, Comedia" data-duration="1h 30 mins" data-synopsis="Se escucha un zumbido por todos lados acerca de Bee Movie, La historia de unaabeja, la extraordinaria comedia de Jerry Seinfeld su creador e icono cómico. El ambicioso y joven trabajador, Barry B. Benson se eleva al mundo junto con los polinesios en busca de néctar y aventuras. Pero cuando rompe una de las reglas más importantes del reino de las abejas hablando con los humanos, Barry desencadena una serie de eventos que comprueban que una pequeña abeja ¡hace una gran diferencia!" data-link="https://vpn-movie-ofc.blogspot.com/2024/05/embed_27.html?r=aHR0cHM6Ly9pcGxheWVyaGxzLmNvbS9lLzJxOWR3bHYzbDZnNg==">
+    <img src="https://image.tmdb.org/t/p/original/rYBaXgvTKFS8iZC7Wr8SMomSauQ.jpg" alt="Bee Movie">
+    <p></p>
+</div>
+<div class="movie" data-title="Bichos: Una Aventura en Miniatura" data-year="1998" data-genre="Familia, Animación, Aventura, Comedia" data-duration="1h 34 mins" data-synopsis="Un viaje al diminuto mundo de los bichos, pero en dimensión de tamaño natural y aventuras que se encuentran en cada hoja de árbol. Flik, una hormiga muy ingeniosa que lucha por la libertad de los bichos del mundo, contrata a bichos guerreros para defender su colonia de un grupo de saltamontes comandados por Hopper. Pero cuando la caballería de Flik resulta ser un conjunto de artistas de circo, comienzan las cómicas confusiones." data-link="https://vpn-movie-ofc.blogspot.com/2024/05/embed_27.html?r=aHR0cHM6Ly9pcGxheWVyaGxzLmNvbS9lLzdhYWwzZWgxb3V0Yg==">
+    <img src="https://image.tmdb.org/t/p/original/Ah3J9OJVc2CNCuH2zMydXy9fmIC.jpg" alt="Bichos: Una Aventura en Miniatura">
+    <p></p>
+</div>
 
 
 
